--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -13,7 +13,7 @@ html(lang="es")
     //- CSS
     link(rel="stylesheet", href="css/bootstrap.css")
     link(rel="stylesheet", href="css/style.css")
-    title Document
+    title #{nombreSitio} | #{pagina}
     
   body
     include header 
