--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -5,7 +5,7 @@ header
         
           .col-md-4.col-6
             a(href="/") 
-              img(src="img/logo.svg", alt="imagen logo")
+              img(src="/img/logo.svg", alt="imagen logo")
               
           .col-md-8
             nav.mt-5.mt-md-0.nav.justify-content-center.justify-content-md-end
