--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -11,8 +11,8 @@ html(lang="es")
     link(href='https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Staatliches&display=swap' rel='stylesheet')
 
     //- CSS
-    link(rel="stylesheet", href="css/bootstrap.css")
-    link(rel="stylesheet", href="css/style.css")
+    link(rel="stylesheet", href="/css/bootstrap.css")
+    link(rel="stylesheet", href="/css/style.css")
     title #{nombreSitio} | #{pagina}
     
   body
