--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -5,20 +5,27 @@ block contenido
     h1.text-center.mt-5= pagina
     
     .row 
-      h2.d-block.w-100.text-center Agrega un Testimonial
+    
+      .col-md-12
+        h2.d-block.w-100.text-center Agrega un Testimonial
+      
+        if(errores)
+          each error in errores 
+            .alert.col.alert-danger.text-center= error.mensaje
       
       .row.justify-content-center.col
         .col-md-8 
-          form(action="" method="POST") 
+          form(action="/testimoniales" method="POST") 
             .form-group 
               label(for="nombre") Nombre 
-              input(id="nombre" type="text" placeholder="Tú nombre" name="nombre" class="form-control")
+              input(id="nombre" type="text" placeholder="Tú nombre" name="nombre" class="form-control" value=nombre)
               
             .form-group 
               label(for="correo") Correo 
-              input(id="correo" type="text" placeholder="Tú correo" name="correo" class="form-control")
+              input(id="correo" type="text" placeholder="Tú correo" name="correo" class="form-control" value=correo)
               
             .form-group 
               label(for="mensaje") Mensaje 
-              textarea( id="mensaje" name="mensaje" placeholder="Tú mensaje"  rows=3 class="form-control") 
+              textarea( id="mensaje" name="mensaje" placeholder="Tú mensaje"  rows=3 class="form-control")= mensaje
+              
             input(type="submit" class="btn btn-success btn-block")
