--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -4,8 +4,20 @@ block contenido
   main.container.mt-5
     h1.text-center.mt-5= pagina
     
+    if(testimoniales)
+      blockquote.text-center Lee sobre nuestro clientes y sus eperiencias
+      .row.testimoniales
+        each testimonial in testimoniales 
+          .col-md-6.col-lg-4.mb-4
+            .card 
+              .card-body 
+                blockquote.blockquote
+                p.mb-0
+                  | #{testimonial.mensaje}
+                footer.blockquote-footer 
+                  | #{testimonial.nombre}
+                
     .row 
-    
       .col-md-12
         h2.d-block.w-100.text-center Agrega un Testimonial
       
