--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -15,8 +15,10 @@ html(lang="es")
     link(rel="stylesheet", href="/css/style.css")
     title #{nombreSitio} | #{pagina}
     
-  body
+  body(class=`${clase}`)
     include header 
+    
+    block slider
     
     block contenido
     
